# Trabalho_II_Comunicacao

./: .gitignore  CMakeLists.txt  README.md  crc.h  emissor.cpp  framing.hpp  net_compat.hpp  receptor.cpp
